# cubegame

./: CMakeLists.txt  setup.bat  setup.sh
src/: cubegame.cpp  cubegame.hpp  main.cpp
